--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-clipboard2": "^0.3.1",
+    "vue-infinite-scroll": "^2.0.2",
     "vue-router": "^3.4.3"
   },
   "devDependencies": {
