--- a/package.json
+++ b/package.json
@@ -18,16 +18,23 @@
     "vue": "^2.6.11",
     "vue-clipboard2": "^0.3.1",
     "vue-infinite-scroll": "^2.0.2",
-    "vue-router": "^3.4.3"
+    "vue-router": "^3.4.3",
+    "vuetify": "^2.3.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "deepmerge": "^4.2.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "fibers": "^5.0.0",
+    "sass": "^1.26.10",
+    "sass-loader": "^8.0.2",
+    "vue-cli-plugin-vuetify": "~2.0.7",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
     "root": true,
